--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,7 +42,7 @@ jobs:
     - name: Commit and push changes
       run: |-
         git diff
-        git config user.name "Automated"
+        git config user.name "GitHub Actions"
         git config user.email "actions@users.noreply.github.com"
         git diff --quiet || (git add -A && git commit -m "Updated with latest")
         git push
