--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ jobs:
         fetch-depth: 0
     - name: Download Feed
       run: |-
-        curl "https://prod-content-cdn.chelseafc.com/content/chelseafc/en.newsfeed.v3.0.10.2022.0.all.web.none.order_date_desc.json" | jq . > source.json
+        curl "https://www.chelseafc.com/en/api/news/listing?pageIndex=1&pageSize=1" | jq . > source.json
     - name: Commit and push changes
       run: |-
         git diff
